--- a/main.css
+++ b/main.css
@@ -56,11 +56,11 @@ body{
     border: 1px solid yellow;
 }
 
-/* .box2{
+.box2{
     width: 100%;
     height: 100%;
     background-color: blue;
-} */
+}
 
 .box3{
     width: 100px;
