--- a/main.css
+++ b/main.css
@@ -13,16 +13,21 @@
 }
 
 body{
-    background-color: #555;
     font-size: 1.6rem;
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background-color: #555;
+    padding: 2rem;
 }
 
-/* SWITCH */
-#checkbox{
+/* SWITCH ONE with 2 DIVs */
+
+/* hide default checkbox */
+#checkbox,
+#checkbox2{
     display: none;
 }
 
+/* background */
 .switch{
     position: relative;
     margin: 2rem;
@@ -32,38 +37,41 @@ body{
     border-radius: 2.5rem;
 }
 
+/* moving part */
 .slider{
     position: absolute;
-    top: 1rem;
-    left: 1rem;
-    width: 3rem;
-    height: 3rem;
-    background-color: red;
-    transform: rotate(45deg);
-    transition: all .5s ease-in-out;
+    top: .5rem;
+    left: .5rem;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background: red;
+    transition: all .5s;
 }
 
+/* movement */
 #checkbox:checked ~ .switch > .slider{
-    transform: translateX(5rem) rotateZ(225deg);
+    transform: translateX(5rem);
 }
 
-.box{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    margin: 5rem;
-    padding: 1rem;
-    border: 1px solid yellow;
+/* SWITCH TWO with ::before */
+
+/* hiding on line 27 */
+
+/* background same as switch one (line 28-35) */
+
+.switch2::before{
+    content: "";
+    position: absolute;
+    top: .5rem;
+    left: .5rem;
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background: red;
+    transition: all .5s;
 }
 
-.box2{
-    width: 100%;
-    height: 100%;
-    background-color: blue;
-}
-
-.box3{
-    width: 100px;
-    height: 100px;
-    background-color: green;
+#checkbox2:checked ~ .switch2::before{
+    transform: translateX(5rem);
 }
